responsive: fix gap between header and content

--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body {
     /* This is important to make it stand out from the overlay */
     color: var(--primary-color);
     height: 100dvh;
-    padding: var(--body-padding);
+    padding: var(--spacing-10) var(--body-padding-x);
     position: relative;
 }
 
@@ -52,7 +52,6 @@ body {
 .layout {
     height: 100%;
     justify-content: center;
-    padding: var(--spacing-9) 0;
     width: 100%;
 }
 
@@ -71,7 +70,7 @@ body {
 .layout__content {
     flex: 1;
     font-weight: 200;
-    gap: var(--spacing-6);
+    gap: var(--spacing-5);
     justify-content: center;
     max-width: 325px;
 }
@@ -178,10 +177,15 @@ body {
         gap: 64px;
     }
 
+    .layout__header {
+        padding: 0;
+    }
+
     .layout__content {
         flex: unset;
         width: 100%;
         max-width: 48rem;
+        justify-content: center;
     }
 
     .content__message,
